--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "*.rmd": "markdown",
         "iostream": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "lesson14cpp": "cpp",
+        "iomanip": "cpp",
+        "ios": "cpp"
     }
 }
