adding lesson 18, 19, recitation 6 and all of project 1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,10 @@
         "ostream": "cpp",
         "lesson14cpp": "cpp",
         "iomanip": "cpp",
-        "ios": "cpp"
+        "ios": "cpp",
+        "istream": "cpp",
+        "iosfwd": "cpp",
+        "system_error": "cpp",
+        "string": "cpp"
     }
 }
