adding homeworks and lessons

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,8 @@
         "numbers": "cpp",
         "semaphore": "cpp",
         "stop_token": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "__memory": "cpp",
+        "filesystem": "cpp"
     }
 }
